<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Olivier Clermont, Jonathan Ermel, Mathieu Fortin-Boulay, Philippe Legault & Nicolas Ménard
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <bool name="isTablet">false</bool>

    <string name="app_name">RTDC</string>
    <string name="title_drawer_menu">RTDC</string>
    <string name="title_capacity_overview">Capacity Overview</string>
    <string name="title_action_plan">Action Plan</string>
    <string name="title_messages">Messages</string>
    <string name="title_manage_users">Manage Users</string>
    <string name="title_manage_units">Manage Units</string>

    <string name="title_activity_create_unit">Create Unit</string>
    <string name="title_activity_create_action">Create Action</string>

    <string name="capacity_unit_name">Unit Name</string>
    <string name="available_beds">Available Beds</string>
    <string name="potential_dc">Potential DC</string>
    <string name="dc_by_2pm">DC by 2PM</string>
    <string name="total_admits">Total Admits</string>
    <string name="admits_by_2pm">Admits by 2PM</string>
    <string name="status_at_2pm">Status at 2PM</string>

    <string name="beds">Beds</string>
    <string name="discharges">Discharges</string>
    <string name="admissions">Admissions</string>

    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="action_new">New</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="action_unit">Unit</string>
    <string name="action_status">Status</string>
    <string name="action_role">Role</string>
    <string name="action_role_hint">Employee or Role Name</string>
    <string name="action_action">Action</string>
    <string name="action_target">Target</string>
    <string name="action_target_hint">Patient and/or Room</string>
    <string name="deadline">Deadline</string>
    <string name="description">Description</string>

    <string name="action_status_not_started">Not Started</string>
    <string name="action_status_in_progress">In Progress</string>
    <string name="action_status_completed">Completed</string>
    <string name="action_status_failed">Failed</string>

    <string name="assignee">Assignee</string>
    <string name="objective">Objective</string>

    <string name="unit_details">Unit Details</string>
    <string name="login_details">Login Details</string>
    <string name="contact_information">Contact Information</string>
    <string name="permissions">Permissions</string>

    <string name="change_status">Change Status</string>
    <string name="done">Done</string>

    <string name="unit_name_title">Unit Name</string>
    <string name="type_contact_name">Type contact name...</string>
    <string name="mute">Mute</string>
    <string name="video">Video</string>
    <string name="speaker">Speaker</string>

    <string-array name="action_status">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Failed</item>
    </string-array>
    <string-array name="actions">
        <item>Push for Discharge</item>
        <item>Off Servicing to</item>
        <item>Hold</item>
    </string-array>

</resources>
