<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/discardCapacity"
          android:title="@string/cancel"
          android:icon="@drawable/ic_action_discard"
          android:showAsAction="ifRoom|withText"
          android:visible="false" />

    <item android:id="@+id/saveCapacity"
          android:title="@string/save"
          android:icon="@drawable/ic_action_save"
          android:showAsAction="ifRoom|withText"
          android:visible="false" />

    <item android:id="@+id/editCapacity"
          android:title="@string/edit"
          android:icon="@drawable/ic_action_edit"
          android:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_go_to_manage"
          android:title="Manage Accounts and Units"
          android:showAsAction="withText"/>
    />

</menu>