<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Olivier Clermont, Jonathan Ermel, Mathieu Fortin-Boulay, Philippe Legault & Nicolas Ménard
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="@dimen/dialog_width"
              android:layout_height="wrap_content" android:orientation="vertical">

    <ScrollView
            android:id="@+id/createActionForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            >

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/change_status"
                    android:id="@+id/dialog_action_status" android:layout_gravity="center_horizontal" android:padding="8dp"
                    android:textColor="@color/RTDC_grey_asbestos"/>

            <RadioGroup
                    android:id="@+id/dialog_action_status_group"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">


                    <RadioButton
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Medium"
                            android:text="@string/action_status_not_started"
                            android:id="@+id/radio_action_not_started" android:textColor="@color/RTDC_black"
                            android:button="@android:color/transparent"
                            android:background="@drawable/radio_status" android:padding="16dp" android:checked="false"/>

                    <RadioButton android:layout_width="fill_parent" android:layout_height="wrap_content"
                                 android:textAppearance="@android:style/TextAppearance.Medium"
                              android:text="@string/action_status_in_progress" android:id="@+id/radio_action_in_progress"
                              android:textColor="@color/RTDC_black" android:button="@android:color/transparent"
                                 android:background="@drawable/radio_status" android:padding="16dp"/>


                    <RadioButton android:layout_width="fill_parent" android:layout_height="wrap_content"
                                 android:textAppearance="@android:style/TextAppearance.Medium"
                              android:text="@string/action_status_completed" android:id="@+id/radio_action_completed"
                              android:textColor="@color/RTDC_black" android:button="@android:color/transparent"
                                 android:background="@drawable/radio_status" android:padding="16dp"/>



                    <RadioButton android:layout_width="fill_parent" android:layout_height="wrap_content"
                                 android:textAppearance="@android:style/TextAppearance.Medium"
                              android:text="@string/action_status_failed" android:id="@+id/radio_action_failed"
                              android:textColor="@color/RTDC_black" android:button="@android:color/transparent"
                                 android:background="@drawable/radio_status" android:padding="16dp"/>



            </RadioGroup>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/action_action"
                  android:id="@+id/dialog_action_action" android:layout_gravity="center_horizontal" android:padding="8dp"
                  android:textColor="@color/RTDC_grey_asbestos"/>

            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:text="@string/edit" android:id="@+id/dialog_button_action_edit"
                    android:textColor="@color/ColorPrimary" android:background="@android:color/transparent"
                    android:gravity="start|center_vertical" android:padding="16dp" android:layout_gravity="center_horizontal"/>
            <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_delete"
                    android:id="@+id/dialog_button_action_delete" android:textColor="@color/RTDC_red" android:background="@android:color/transparent"
                    android:gravity="start|center_vertical" android:padding="16dp" android:layout_gravity="center_horizontal"/>
                <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/done"
                        android:id="@+id/dialog_button_action_done" android:layout_gravity="center_horizontal"
                        style="@style/PrimaryButton" android:textSize="16sp"/>
            </LinearLayout>
    </ScrollView>

</LinearLayout>