<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Olivier Clermont, Jonathan Ermel, Mathieu Fortin-Boulay, Philippe Legault & Nicolas Ménard
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="rtdc.android.presenter.CreateActionActivity">
    <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            />

    <ScrollView
            android:id="@+id/createActionForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:padding="16dp">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!-- Assignee -->
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/assignee"
                      android:id="@+id/assignee" android:paddingLeft="8dp" android:paddingRight="8dp"
                    />
            <android.support.v7.widget.CardView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    card_view:cardCornerRadius="2dp"
                    android:id="@+id/assignee_card_view" android:layout_marginBottom="14dp" android:layout_marginTop="2dp">

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                    <TextView
                            android:id="@+id/unitText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_unit"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            />

                    <rtdc.android.impl.AndroidUiDropdown
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/unitSpinner"/>

                    <TextView
                            android:id="@+id/roleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_role"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:paddingTop="8dp"/>

                    <rtdc.android.impl.AndroidUiString
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/action_role_hint"
                            android:id="@+id/roleEdit"
                            android:singleLine="true"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Action -->
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/action_action"
                      android:id="@+id/action" android:paddingLeft="8dp" android:paddingRight="8dp"
                    />
            <android.support.v7.widget.CardView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    card_view:cardCornerRadius="2dp"
                    android:id="@+id/action_card_view" android:layout_marginBottom="14dp" android:layout_marginTop="2dp">

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/action_status"
                            android:id="@+id/statusText"/>

                    <rtdc.android.impl.AndroidUiDropdown
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/statusSpinner"/>


                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/action_action"
                            android:id="@+id/actionText"
                            android:paddingTop="8dp"/>

                    <rtdc.android.impl.AndroidUiDropdown
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/actionSpinner"/>


                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/description"
                            android:id="@+id/descriptionText"
                            android:paddingTop="8dp"/>

                    <rtdc.android.impl.AndroidUiString
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:ems="10"
                            android:id="@+id/descriptionEdit"
                            android:gravity="top|left"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Objective -->
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/objective"
                      android:id="@+id/objective" android:paddingLeft="8dp" android:paddingRight="8dp"
                    />
            <android.support.v7.widget.CardView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    card_view:cardCornerRadius="2dp"
                    android:id="@+id/objective_card_view" android:layout_marginBottom="14dp" android:layout_marginTop="2dp">

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/action_target"
                            android:id="@+id/targetText"/>

                    <rtdc.android.impl.AndroidUiString
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/action_target_hint"
                            android:ems="10"
                            android:id="@+id/targetEdit"
                            android:singleLine="true"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/deadline"
                            android:id="@+id/deadlineText"
                            android:paddingTop="8dp"/>

                    <rtdc.android.impl.AndroidUiDate
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:drawableRight="@drawable/ic_access_time_black_24dp"
                            android:drawableEnd="@drawable/ic_access_time_black_24dp"
                            android:longClickable="false"
                            android:background="@android:color/transparent"
                            android:focusable="false"
                            android:id="@+id/deadlineEdit" android:clickable="true"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>