<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Olivier Clermont, Jonathan Ermel, Mathieu Fortin-Boulay, Philippe Legault & Nicolas Ménard
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp" android:background="@color/RTDC_dark_blue" android:minHeight="35dp"
            >
        <Space
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3" android:layout_gravity="center_vertical"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/capacity_unit_name"
                android:id="@+id/unitNameHeader"
                android:layout_weight="3" android:textStyle="bold" android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" android:background="@android:color/transparent"
                android:gravity="center" android:textColor="@color/RTDC_white" android:textSize="16sp"
                android:focusableInTouchMode="true" android:focusable="true" android:enabled="true"/>

        <Space
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8" android:layout_gravity="center_vertical"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/available_beds"
                android:id="@+id/availableBedsHeader"
                android:layout_weight="2" android:layout_gravity="center_vertical"
                android:textColor="#ffffff" android:background="@android:color/transparent"
                android:textStyle="italic" android:gravity="center" android:textSize="13sp"
                />

        <Space
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8" android:layout_gravity="center_vertical"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/potential_dc"
                android:id="@+id/potentialDCHeader"
                android:layout_weight="2" android:layout_gravity="center_vertical"
                android:textColor="@color/RTDC_white" android:background="@android:color/transparent"
                android:textStyle="italic" android:gravity="center" android:textSize="13sp"
                />

        <Space
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8" android:layout_gravity="center_vertical"/>


        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dc_by_2pm"
                android:id="@+id/DCByDeadlineHeader"
                android:layout_weight="2" android:layout_gravity="center_vertical"
                android:textColor="@color/RTDC_white" android:background="@android:color/transparent"
                android:textStyle="italic" android:gravity="center" android:textSize="14sp"
                />

        <Space
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8" android:layout_gravity="center_vertical"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/total_admits"
                android:id="@+id/totalAdmitsHeader"
                android:layout_weight="2" android:layout_gravity="center_vertical"
                android:textColor="@color/RTDC_white" android:background="@android:color/transparent"
                android:textStyle="italic" android:gravity="center" android:textSize="14sp"
                />

        <Space
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8" android:layout_gravity="center_vertical"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/admits_by_2pm"
                android:id="@+id/admitsByDeadlineHeader"
                android:layout_weight="2" android:layout_gravity="center_vertical"
                android:textColor="@color/RTDC_white" android:background="@android:color/transparent"
                android:textStyle="italic" android:gravity="center" android:textSize="14sp"
                />

        <Space
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8" android:layout_gravity="center_vertical"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/status_at_2pm"
                android:id="@+id/statusAtDeadlineHeader"
                android:layout_weight="2" android:layout_gravity="center_vertical"
                android:textColor="@color/RTDC_white" android:background="@android:color/transparent"
                android:textStyle="italic" android:gravity="center" android:textSize="14sp"
                />

        <Space
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3" android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <ListView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/capacity_list_view" android:layout_gravity="center_horizontal" android:choiceMode="none"/>
</LinearLayout>